[tool.poetry]
name = "limber-project"
version = "0.2.0"
description = ""
authors = ["Jonathan Staniforth <jonathanstaniforth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material-extensions = "1.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "5.5.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
